<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sourav2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".sourav2">


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_your_name"
        android:textColor="@color/white"
        android:textSize="20sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="30sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_your_e_mail"
        android:textColor="@color/white"
        android:textSize="20sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact"
        android:textColor="@color/white"
        android:textSize="30sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_your_contact"
        android:textColor="@color/white"
        android:textSize="20sp"

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textSize="30sp"
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_your_address"
        android:textColor="@color/white"
        android:textSize="20sp"



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/DarkOliveGreen"
            android:layout_weight="1"
            android:text="@string/cancle" />
    </LinearLayout>


</LinearLayout>

